[gd_scene load_steps=3 format=2]

[ext_resource path="res://RoomSelectUI.gd" type="Script" id=1]

[sub_resource type="GDScript" id=1]
script/source = "

"

[node name="RoomSelectUI" type="Control"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 1.0
margin_top = 2.0
margin_right = 519.0
margin_bottom = 601.0
script = SubResource( 1 )

[node name="Label" type="Label" parent="Panel"]
margin_left = 111.0
margin_top = 90.0
margin_right = 401.0
margin_bottom = 159.0
text = "Enter a ROom COde OR Create A New ONe"
align = 1
valign = 1
uppercase = true

[node name="RoomNumberLine" type="LineEdit" parent="Panel"]
margin_left = 152.0
margin_top = 167.0
margin_right = 367.0
margin_bottom = 207.0
text = "Room Number"

[node name="JoinRoom" type="Button" parent="Panel"]
margin_left = 161.0
margin_top = 238.0
margin_right = 361.0
margin_bottom = 266.0
text = "Join Room"

[node name="CreateRoom" type="Button" parent="Panel"]
margin_left = 160.0
margin_top = 303.0
margin_right = 360.0
margin_bottom = 331.0
text = "Create a New Room"
[connection signal="pressed" from="Panel/JoinRoom" to="." method="_on_JoinRoom_pressed"]
[connection signal="pressed" from="Panel/CreateRoom" to="." method="_on_CreateRoom_pressed"]
